# Real-account-trading-framework

./: .gitignore  C++框架对接说明.md  C++端需要实现的接口.md  LINUX_LATENCY_TEST_GUIDE.md  PAPERTRADING_FIX.md  PAPERTRADING_FRONTEND_GUIDE.md  PAPERTRADING_STARTUP_TEST.md  PRODUCTION_READINESS.md  QUICK_REFERENCE.md  QUICK_START_ZEROMQ.md  README.md  RUN_LATENCY_TEST.md  run_latency_test_pinned.sh  前后端完整对接文档.md  前端需要的接口规范.md  完整启动指南.md  完整系统架构.md  策略编译部署方案.md  系统总结.md
cpp/: .clangd  ACCOUNT_MONITOR_DYNAMIC_UPDATE.md  CMakeLists.txt  KILL_SWITCH_MODIFICATION.md  MONITORING_OUTPUT_DEMO.md  PYTHON_CPP_对比.md  QUICK_START.md  README.md  RISK_SYSTEM_INTEGRATION_REPORT.md  VUE前端连接指南.md  WEBSOCKET_README.md  accounts.json  api-key.txt  rebuild_server.sh  risk_config.json  run_longterm.sh  run_stability_test.sh  run_stress_test.sh  server.json  stress_test_client.py  test_final_kline_reception.py  test_kline_receive.py  test_simple_kline.py  test_strategy_kline_subscription.py  test_strategy_subscribe.py  test_subscribe_channel.py  test_zmq_message_format.py  前端接入指南.md  架构说明.md  策略端API文档.md  策略端接口文档.md  运行OKX测试.md  项目总结.md  项目结构.txt
cpp/adapters/: ADAPTER_ARCHITECTURE.md  QUICK_START.md
cpp/bindings/: CMakeLists.txt  README.md  python_bindings.cpp
cpp/core/: config_center.h  config_loader.h  data.h  journal_protocol.h  journal_reader.py  journal_writer.h  logger.cpp  logger.h  websocket_server.cpp  websocket_server.h
cpp/docs/: ZeroMQ实盘框架设计文档.md  api-reference.html  start_docs_server.sh
cpp/examples/: CMakeLists.txt  RUN_BINANCE_TESTS.sh  RUN_MARKET_DATA_TEST.md  RUN_USER_STREAM_TEST.md  auth_server.cpp  build_and_run_test_manager.sh  build_websocket_server.sh  build_websocket_server_windows.bat  compare_exchanges.sh  main_example.cpp  quick_start_websocket.sh  run_market_data_test.sh  run_test_binance_api.sh  run_test_okx_api.sh  test_account_callback.py  test_auth.cpp  test_auth_server.cpp  test_auth_ws_server.cpp  test_batch_orders.py  test_binance_account_balance.cpp  test_binance_batch_orders.cpp  test_binance_futures_kline.cpp  test_binance_futures_rest_order_testnet.cpp  test_binance_futures_user_stream_testnet.cpp  test_binance_futures_ws_order_testnet.cpp  test_binance_login_simple.cpp  test_binance_market_data_comprehensive.cpp  test_binance_rest_api_all.cpp  test_binance_spot.cpp  test_binance_ws_all_market_testnet.cpp  test_binance_ws_kline_testnet.cpp  test_binance_ws_mark_price_testnet.cpp  test_binance_ws_market.cpp  test_binance_ws_trade_testnet.cpp  test_binance_ws_trading.cpp  test_core.cpp  test_disruptor_benchmark.cpp  test_disruptor_latency.cpp  test_disruptor_perf.cpp  test_journal_benchmark.cpp  (+41 more)
cpp/logs/: alpha_077_094_080_binance_testnet.txt  five_mom_factor_binance_testnet.txt  main.txt  market.txt  okxchonglian.txt  ret_skew_binance_btc_main.txt  ret_skew_binance_btc_testnet.txt  ret_skew_okx_btc_main.txt  ret_skew_okx_btc_testnet.txt  server.pid  stress_test.pid
cpp/network/: auth_manager.h  proxy_config.h  vpn_network_monitor.h  websocket_server.cpp  ws_client.cpp  ws_client.h  ws_reconnect.h  zmq_server.cpp  zmq_server.h
cpp/papertrading/: ARCHITECTURE.md  BUILD.md  IMPLEMENTATION_STATUS.md  QUICK_START.md  README_CONFIG.md  START_GUIDE.md  build.sh  main.cpp  mock_account_engine.cpp  mock_account_engine.h  order_execution_engine.cpp  order_execution_engine.h  papertrading_config.cpp  papertrading_config.h  papertrading_config.json  papertrading_server.cpp  papertrading_server.h  papertrading_websocket_bridge.h
cpp/report/: C++实盘框架与多策略低延迟通信方案.md  FILES_CHECKLIST.md  GIT_MERGE_GUIDE.md  JOURNAL_IMPLEMENTATION_COMPLETE.md  Kungfu框架深度分析.md  PyBind11多策略通信方案.md  QUICK_START_JOURNAL.md  README_JOURNAL.md  run_latency_test.sh  实现总结.md  快速操作步骤.sh  方案选型指南.md  无锁环形队列.md  无锁环形队列在实盘框架中的应用方案.md  测试报告.md
cpp/risktest/: test_risk_manager.cpp
cpp/scripts/: all_klines_stats_report.txt  auto_kline_monitor_v2.py  batch_preload_klines.py  binance_1m_commands.txt  binance_1m_usdt_report.txt  binance_1m_usdt_summary.txt  check_klines_stats.py  download_binance_1m_klines.py  fast_kline_filler.py  fetch_binance_min_qty.py  fetch_okx_min_coin_qty.py  klines_stats_report.txt  klines_summary.txt  monitor_8h_klines.py  monitor_btc_klines.sh  monitor_okx_disconnect.py  preload_klines_to_redis.py  run_trading_system.sh  start_all.sh  test_kline_sync_logic.py  test_redis_8h_klines.py  view_okx_debug.sh
cpp/server/: ACCOUNT_MANAGEMENT.md  HOW_TO_VIEW_KLINES.md  README_fill_missing_klines.md  accounts.json  analyze_klines.py  btc_continuity_report.py  check_all_continuity.py  check_btc_1m_continuity.py  check_kline_continuity.py  data_recorder.cpp  frontend_handler.h  frontend_ws_server.h  gap_detector.cpp  historical_data_fetcher.cpp  historical_data_fetcher.h  kline_fast_filler.cpp  kline_gap_filler copy.cpp  kline_gap_filler.cpp  kline_utils.cpp  kline_utils.h  monitor_klines_enhanced.sh  trading_server.cpp  trading_server_full.cpp  trading_server_full.cpp.backup  trading_server_live.cpp  trading_server_main.cpp  trading_server_with_ui.cpp  zmq_server.cpp  zmq_server.h
cpp/strategies/: CHANGELOG_深度频道.md  CHANGELOG_资金费率.md  CMakeCache.txt  CMakeLists.txt  LOG_README.md  MULTI_ACCOUNT_GUIDE.md  Makefile  README_策略基类.md  STRATEGY_MAPPING.md  TEST_REPORT.md  account_module.h  build_strategy_base.sh  cmake_install.cmake  demo_strategy.h  example_strategy.py  grid_strategy_cpp.py  grid_strategy_cpp_2.py  grid_strategy_cpp_3.py  grid_strategy_fast.py  grid_strategy_paper.py  grid_strategy_standalone.py  historical_data_module.h  market_data_module.h  multi_account_config.yaml  py_strategy_base.h  py_strategy_bindings.cpp  redis_data_fetcher.py  run_multi_account.py  run_multi_account.sh  strategy_base.h  strategy_client.py  stress_test_strategy.py  test_complete_logging.py  test_order_interfaces.py  test_orderbook.py  test_scheduled_task.py  trading_module.h  trading_server_full  view_strategy_logs.sh  zmq_debug_subscriber.py  (+3 more)
cpp/tools/: Makefile  README_risk_control.md  kline_5m_monitor  kline_5m_monitor.cpp  kline_8h_monitor  kline_8h_monitor.cpp  kline_latency_monitor  (+2 more)
(+433 files in other folders)
